EACWebsiteYT index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale.0" />
     <title>EACWebsiteYT</title>
     <link rel="stylesheet" href="style.css" />
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-K62THXE22F"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-K62THXE22F');
+</script>
   </head>
   <body>
     <header id="header">
