--- a/index.html
+++ b/index.html
@@ -5,15 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale.0" />
     <title>EACWebsiteYT</title>
     <link rel="stylesheet" href="style.css" />
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-K62THXE22F"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
-
-  gtag('config', 'G-K62THXE22F');
-</script>
   </head>
   <body>
     <header id="header">
@@ -25,7 +16,7 @@
           >
         </div>
 
-        <div class="header-menu">
+        <div class="header-menu"> 
           <a href="#Home">Home</a>
           <a href="#Contents">Contents</a>
           <a href="#Games">Games</a>
@@ -39,8 +30,7 @@
         <img src="EACWorksYT logo.jpg" alt="EACWorksYT" />
         <div class="about-text">
           <pre>
-EACWorksYT has a YouTube channel with over 1,000 subscribers and 365 
-videos. The content includes:</pre
+EACWorksYT has a YouTube channel with over 1,000 subscribers. The content includes:</pre
           >
           <ul>
             <li>
@@ -73,16 +63,18 @@ videos. The content includes:</pre
       <div class="stumble-guys-text">
         <pre>
 I played Stumble Guys since March 2021 
-which is still old and it’s still available on 
+which it’s still available on 
 mobile. And then, the developer made a 
-Stumble Guys in PC version. This game is 
-popular in 2022.</pre
+Stumble Guys in PC version. This game was
+popular in 2022. But since a new developer
+collaborates a lot, it makes me boring and
+I could play depending my enjoyment.</pre
         >
         <pre>
-          
-link playlist Stumble Guys 
--> <a href="https://www.youtube.com/playlist?list=PLvDfS4ZaoRrHkRc82BcUlZeQXc2ylx_8B">https://www.youtube.com/playlist?list=PLvDfS4ZaoRrHkRc
-82BcUlZeQXc2ylx_8B</a></pre>
+<a href="https://youtube.com/playlist?list=PLvDfS4ZaoRrHkRc82BcUlZeQXc2ylx_8B&si=HYHEMYbjbrrY5VZe">Stumble Guys Push Crown Gameplay Playlist</a>
+
+<a href="https://youtube.com/playlist?list=PLvDfS4ZaoRrHxc1vo80YAAH6C53KkuDDo&si=uzTR0KhwNM_pT6Ig">Stumble Guys Tournament Gameplay Playlist</a>
+        </pre>
       </div>
       <div class="call-of-duty">
         <img
@@ -91,58 +83,23 @@ link playlist Stumble Guys
         />
         <div class="codmw-series-logo">
           <div class="mwr-logo">
-            <img
-              src="MWR_LOGO_NEG.png"
-              alt="Call Of Duty 4: Modern Warfare Remastered Logo"
-            />
+            <img src="MWR_LOGO_NEG.png" alt="Call Of Duty 4: Modern Warfare Remastered Logo"/>
           </div>
           <div class="codmw2cr-logo">
-            <img
-              src="mw2cr-logo.png"
-              alt="Call Of Duty: Modern Warfare 2 Campaign Remastered Logo"
-            />
+            <img src="mw2cr-logo.png" alt="Call Of Duty: Modern Warfare 2 Campaign Remastered Logo" />
           </div>
           <div class="mw3-logo">
-            <img
-              src="1280px-ModernWarfare3Logo.svg.png"
-              alt="Call Of Duty: Modern Warfare 3 Logo"
-            />
+            <img src="1280px-ModernWarfare3Logo.svg.png" alt="Call Of Duty: Modern Warfare 3 Logo"/>
           </div>
         </div>
         <div class="call-of-duty-text">
           <pre>
-I also played Call Of Duty games since 
-2022 and it’s Call Of Duty Modern Warfare 
-series. There are 2 Call Of Duty Modern 
-Warfare series which it’s been remastered
-to improve graphics and details, and I’ll 
-make the remastered gameplay content. 
-But in Modern Warfare 3 we don’t know 
-are they focus on something MW3 (2011) 
-remastered or Modern Warfare Reboot.</pre
+  I also played Call Of Duty Modern Warfare Old series with Singleplayer.</pre
           >
           <ul>
-            <li>
-              link playlist Call Of Duty Modern Warfare Remastered ->
-              <a
-                href="https://www.youtube.com/playlist?list=PLvDfS4ZaoRrFPmwieFX8MUrWOkuDSxThL"
-                >https://www.youtube.com/playlist?list=PLvDfS4ZaoRrFPmwieFX8MUrWOkuDSxThL</a
-              >
-            </li>
-            <li>
-              link playlist Call Of Duty Modern Warfare 2 Campaign Remastered ->
-              <a
-                href="https://www.youtube.com/playlist?list=PLvDfS4ZaoRrEfsaxBU26WZOV2zX5GRMbx"
-                >https://www.youtube.com/playlist?list=PLvDfS4ZaoRrEfsaxBU26WZOV2zX5GRMbx</a
-              >
-            </li>
-            <li>
-              link playlist Call Of Duty Modern Warfare 3 ->
-              <a
-                href="https://www.youtube.com/playlist?list=PLvDfS4ZaoRrHs_m_PqEvf3NKzU9Zzc7V3"
-                >https://www.youtube.com/playlist?list=PLvDfS4ZaoRrHs_m_PqEvf3NKzU9Zzc7V3</a
-              >
-            </li>
+            <li><a href="https://youtube.com/playlist?list=PLvDfS4ZaoRrFdQRawCOYpcSv1W0jB2jjV&si=ogJUxQovT6qiWc-U">Playlist of Call Of Duty 4: Modern Warfare Remastered Gameplay (NEW!)</a></li>
+            <li><a href="https://youtube.com/playlist?list=PLvDfS4ZaoRrEfsaxBU26WZOV2zX5GRMbx&si=ruhyWRUprY8CyuiE">Playlist of Call Of Duty: Modern Warfare 2 Campaign Remastered Gameplay</a></li>
+            <li><a href="https://youtube.com/playlist?list=PLvDfS4ZaoRrHs_m_PqEvf3NKzU9Zzc7V3&si=6APpzd80NXlcEVqJ">Playlist of Call OF Duty: Modern Warfare 3 Gameplay</a></li>
           </ul>
         </div>
       </div>
@@ -157,31 +114,23 @@ remastered or Modern Warfare Reboot.</pre
         <div class="roblox-text">
           <pre>
 I also played Roblox Arsenal.
-Arsenal is an FPS game in Roblox which you play 
-with 2 teams, 4 teams, or free for all and then 
-who got 16/32/33 kills, is the winner and then 
-the game is over.</pre
+This is my journey of playing Roblox Arsenal
+from noob into pro.
+</pre
           >
           <pre>
-I need to improve my playing skills. So I played 
-Roblox not only Arsenal, but I played like aim 
-training, Natural Disaster Survival, and more 
-that I think that is fun.</pre
+
+Not only Arsenal that I played in Roblox,
+but I also playing Murder Mystery 2, Natural Disaster,
+and other games.
+</pre
           >
           <ul>
             <li>
-              link playlist Roblox Arsenal ->
-              <a
-                href="https://www.youtube.com/playlist?list=PLvDfS4ZaoRrEl9a-RVesxkCYjWDCMEbG2"
-                >https://www.youtube.com/playlist?list=PLvDfS4ZaoRrEl9a-RVesxkCYjWDCMEbG2</a
-              >
+              <a href="https://youtube.com/playlist?list=PLvDfS4ZaoRrEl9a-RVesxkCYjWDCMEbG2&si=EKfjdzRXK-h0x8yb">Roblox Arsenal Playlist</a>
             </li>
             <li>
-              link playlist Roblox ->
-              <a
-                href="https://www.youtube.com/playlist?list=PLvDfS4ZaoRrHI64PcjTiD8Wd-of5kNcEr"
-                >https://www.youtube.com/playlist?list=PLvDfS4ZaoRrHI64PcjTiD8Wd-of5kNcEr</a
-              >
+              <a href="https://youtube.com/playlist?list=PLvDfS4ZaoRrHI64PcjTiD8Wd-of5kNcEr&si=Lw-PbZUkBSbgzMYc">Roblox Playlist</a>
             </li>
           </ul>
         </div>
@@ -206,8 +155,8 @@ that I think that is fun.</pre
           >
         </figcaption>
         <pre>
-This is a project which I did the Summative Informatics. We did the collaboration with my team using Blocklive extension. I joined Scratch since 2022 and making projects like Jumping 
-Game, Scratch Game, Catch Game, Pong Ball game, and more. But not only games that I made. I also make a program like Solving Circle and Fractal Drawing.</pre
+This is a project which I did the Summative Informatics. We did the collaboration with my team using Blocklive extension. I joined Scratch since 2022 and making projects 
+like Jumping Game, Scratch Game, Catch Game, Pong Ball game, and more. But not only games that I made. I also make a program like Solving Circle and Fractal Drawing.</pre
         >
       </div>
     </section>
