--- a/index.html
+++ b/index.html
@@ -162,5 +162,14 @@ like Jumping Game, Scratch Game, Catch Game, Pong Ball game, and more. But not o
     </section>
 
     <footer id="footer"></footer>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-EGL5XPX39R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-EGL5XPX39R');
+</script>
   </body>
 </html>
