--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale.0" />
     <title>EACWebsiteYT</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="about style.css" />
   </head>
   <body>
     <header id="header">
