--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale.0" />
-    <title>EACWebsiteYT</title>
+    <title>EACWebsiteYT - About</title>
     <link rel="stylesheet" href="about style.css" />
   </head>
   <body>
