--- a/about.html
+++ b/about.html
@@ -17,10 +17,10 @@
         </div>
 
         <div class="header-menu"> 
-          <a href="#Home">Home</a>
+          <a href="index.html">Home</a>
           <a href="#Contents">Contents</a>
           <a href="#Games">Games</a>
-          <a href="#About">About</a>
+          <a href="about.html">About</a>
         </div>
       </nav>
     </header>
