--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
         
         <div class="eacsocialmedia">
           <p>EAC's Social Media</p>
-          <a href="#"><i class="ri-instagram-line"></i></a>
-          <a href="#"><i class="ri-discord-line"></i></a>
-          <a href="#"><i class="ri-steam-line"></i></a>
+          <a href="https://www.instagram.com/eacworksyt"><i class="ri-instagram-line"></i></a>
+          <a href="https://discord.gg/jrD9hJGABw"><i class="ri-discord-line"></i></a>
+          <a href="https://steamcommunity.com/id/eacworksytonsteam"><i class="ri-steam-line"></i></a>
         </div>
 
       </section>
