--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
 
         <div class="header-menu"> 
           <a href="index.html">Home</a>
-          <a href="#Contents">Contents</a>
+          <a href="contents.html">Contents</a>
           <a href="#Games">Games</a>
           <a href="about.html">About</a>
         </div>
