--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <div class="header-menu"> 
             <a href="index.html">Home</a>
             <a href="contents.html">Contents</a>
-            <a href="#Games">Games</a>
+            <a href="games.html">Games</a>
             <a href="about.html">About</a>
           </div>
         </nav>
