--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
         <div class="header-menu"> 
           <a href="index.html">Home</a>
           <a href="contents.html">Contents</a>
-          <a href="#Games">Games</a>
+          <a href="games.html">Games</a>
           <a href="about.html">About</a>
         </div>
       </nav>
