--- a/games.html
+++ b/games.html
@@ -71,6 +71,9 @@ Snake Scratch 2
 You're a snake who lives in the bushes. As you're a snake, your task is find an apple to survive.
 But you need to be careful by touching the edge or your body. You can attack yourself if you touch 
 between your body and edge. Survive in this game as you can.
+
+
+More details: <a href="https:scratch.mit.edu/projects/850870865">https:scratch.mit.edu/projects/850870865</a>
           </pre>
         </div>
       </div>
