--- a/games.html
+++ b/games.html
@@ -73,7 +73,7 @@ But you need to be careful by touching the edge or your body. You can attack you
 between your body and edge. Survive in this game as you can.
 
 
-More details: <a href="https:scratch.mit.edu/projects/850870865">https:scratch.mit.edu/projects/850870865</a>
+More details: <a href="https://scratch.mit.edu/projects/850870865">https:scratch.mit.edu/projects/850870865</a>
           </pre>
         </div>
       </div>
