--- a/contents.html
+++ b/contents.html
@@ -211,5 +211,14 @@ played in Roblox.</pre>
                     </div>
                 </div>
         </section>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F9KKW1R9B1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-F9KKW1R9B1');
+    </script>
 </body>
 </html>
