--- a/games.html
+++ b/games.html
@@ -78,3 +78,16 @@ More details: <a href="https://scratch.mit.edu/projects/850870865">https://scrat
         </div>
       </div>
     </section>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F9KKW1R9B1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-F9KKW1R9B1');
+    </script>
+
+    <footer id="footer"></footer>
+</body>
+</html>
