--- a/index.html
+++ b/index.html
@@ -107,5 +107,14 @@
       </section>
 
       <script src="script.js"></script>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-F9KKW1R9B1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-F9KKW1R9B1');
+    </script>
 </body>
 </html>
